--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
+    "dev:server": "tsx watch src/server.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "vercel-build": "tsc"
   },
   "dependencies": {
     "@hono/node-server": "^1.14.4",
