--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "@types/node": "^20.19.1",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
+  },
+  "engines": {
+    "node": ">=23.0.0"
   }
 }
