--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,9 @@
 {
+  "version": 2,
   "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/api"
     }
-  ],
-  "env": {
-    "JWT_SECRET": "@jwt_secret"
-  },
-  "git": {
-    "deploymentEnabled": {
-      "master": true
-    }
-  },
-  "functions": {
-    "api/index.ts": {
-      "runtime": "nodejs23.x"
-    }
-  }
+  ]
 }
