--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "api/index.ts": {
-      "runtime": "vercel-edge"
+      "runtime": "edge"
     }
   },
   "routes": [{ "src": "/(.*)", "dest": "api/index.ts" }]
