test: minimal version without complex imports

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,4 @@
 {
   "version": 2,
-  "routes": [
-    { "src": "/test", "dest": "/api/test.ts" },
-    { "src": "/(.*)", "dest": "/api/index.ts" }
-  ]
+  "routes": [{ "src": "/(.*)", "dest": "/api/index.ts" }]
 }
