chore: setup: proper Hono.js + Vercel deployment following official docs

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
   "version": 2,
-  "routes": [
-    { "src": "/test", "dest": "/api/test.ts" },
-    { "src": "/(.*)", "dest": "/api/index.ts" }
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/api"
+    }
   ]
 }
