--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "hono-chat-api",
   "version": "1.0.0",
   "description": "Chat API using Hono and Supabase",
-  "main": "dist/index.js",
+  "main": "api/index.ts",
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "dev:server": "tsx watch src/server.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
-    "vercel-build": "tsc"
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "@hono/node-server": "^1.14.4",
